# mbcgmlst

./: LICENSE  README.md  pyproject.toml
conda/recipe/: bld.bat  build.sh  meta.yaml
src/: main.py
src/mbcgmlst/: __init__.py  cli.py  gui.py  pipeline.py
